kube-system/traefik/ds.yml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: traefik-ds
  namespace: kube-system
  labels:
    app.kubernetes.io/name: traefik-ds
    app.kubernetes.io/part-of: traefik
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: traefik
  template:
    metadata:
      name: traefik
      labels:
        app.kubernetes.io/name: traefik
        app.kubernetes.io/part-of: traefik
      annotations:
        # enable prom scraping
        prometheus.io/scrape: "true"
        prometheus.io/path: "/metrics"
        prometheus.io/port: "9000"
    spec:
      serviceAccountName: traefik-ingress-controller
      containers:
        - name: traefik
          image: traefik:v2.3.5
          ports:
            - name: web
              hostPort: 80
              containerPort: 8000
            - name: websecure
              hostPort: 443
              containerPort: 8443
            - name: traefik
              containerPort: 9000
          readinessProbe:
            httpGet:
              path: /ping
              port: traefik
            failureThreshold: 1
            initialDelaySeconds: 1
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 2
          livenessProbe:
            httpGet:
              path: /ping
              port: traefik
            failureThreshold: 3
            initialDelaySeconds: 1
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 2
