kube-system/traefik/lb-service.yml
apiVersion: v1
kind: Service
metadata:
  name: lb-service
  namespace: kube-system
  labels:
    app.kubernetes.io/name: traefik-lb-service
    app.kubernetes.io/part-of: traefik
    k8s.scw.cloud/ingress: traefik2
  annotations:
    service.beta.kubernetes.io/scw-loadbalancer-type: "lb-gp-m"
    service.beta.kubernetes.io/scw-loadbalancer-proxy-protocol-v2: "true"
    service.beta.kubernetes.io/scw-loadbalancer-use-hostname: "true"
spec:
  type: LoadBalancer
  loadBalancerIP: 195.154.69.74
  ports:
    - port: 80
      name: http
      targetPort: web
    - port: 443
      name: https
      targetPort: websecure
  selector:
    app.kubernetes.io/name: traefik
