kube-system/traefik/service.yml
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard-service
  namespace: kube-system
  labels:
    app.kubernetes.io/name: traefik-dashboard-service
    app.kubernetes.io/part-of: traefik
spec:
  ports:
    - port: 9000
      targetPort: 9000
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: traefik
